--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,16 @@
 			<artifactId>spring-boot-test</artifactId>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/junit/junit -->
+
+		<dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+			<version>2.0.1.Final</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -79,7 +89,8 @@
 			<scope>test</scope>
 		</dependency>
 
-	</dependencies>
+
+    </dependencies>
 
 	<build>
 		<plugins>
